# OOP_labs

./: .gitignore  Trapezoid.h
lab_1/: CMakeLists.txt
lab_1/src/: func.cpp  func.h  main.cpp  tests01.cpp
lab_2/: CMakeLists.txt  Thirteen.h  main.cpp
lab_2/src/: Thirteen.cpp  main.cpp  tests01.cpp
lab_2/src/lab2/: Thirteen.cpp
lab_2/test/: test.cpp
lab_3/: CMakeLists.txt  Rombus.cpp  Rombus.h  main.cpp  tests.cpp
lab_3d/: CMakeLists.txt  Figure.cpp  Rectangle.cpp  Rectangle.h  array.h  main.cpp
lab_3v/: main.cpp
lab_3v/include/: Figure.h  Square.h
lab_3v/src/: Square.cpp  array.cpp
lab_3v/test/: hello_test.cpp
lab_4/: CMakeLists.txt  Rombus.h  main.cpp  tests.cpp
lab_5/: CMakeLists.txt  allocator.h  main.cpp  teor.txt  tests.cpp  vector.h
lab_6/: CMakeLists.txt  main.cpp  npc.txt
lab_6/include/: druid.h  elf.h  knight.h  npc.h  text_observer.h
lab_6/src/: druid.cpp  elf.cpp  factory.cpp  knight.cpp
lab_6/test/: npc_test.cpp
lab_6/txt/: npc1  npc2  npc6  npc8
lab_7/: CMakeLists.txt  log.txt  main.cpp
lab_7/include/: druid.h  factory.h
lab_7/src/: druid.cpp  elf.cpp  fight_manager.cpp  knight.cpp
lab_7/test/: npc_test.cpp
